<resources>
    <string name="app_name">Twotr</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_signin">SigninActivity</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="username">Email</string>
    <string name="student">Student</string>
    <string name="tutor">Tutor</string>
    <string name="forget_your_password">Forget your Password?</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="msg">please enable all permissions</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="referal_code">Share Code (Optional)</string>
    <string name="create_subject">Create Session</string>
    <string name="type_and_choose_subject">Type and Choose Subject</string>
    <string name="title_activity_addmaptutor">Map</string>
    <string name="title_activity_schedule_start">ScheduleStart</string>
    <string name="guest">Guest</string>
    <string name="iamnew">I\'m new I\'ll</string>
    <string name="title_activity_schedule_detail_page">ScheduleDetailPAge</string>
    <string name="title_activity_sample_one">SampleOne</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_profile__page">Profile_Page</string>
    <string name="title_activity_profile__edit__personal">Profile_Edit_Personal</string>
    <string-array name="spinner_gender">
        <item>Male</item>
        <item>Female</item>

    </string-array>
    <string name="facebook_app_id">338815739936305</string>
    <string name="title_activity_profile__edit__educational">Profile_Edit_Educational</string>
    <string name="title_activity_profile__edit__professional">Profile_Edit_Professional</string>
    <string name="title_activity_schedule__show_map">Map</string>
    <string name="title_activity_schedule__show_schedule">Schedule_ShowSchedule</string>
    <string name="title_activity_search_all_view">SearchAllView</string>
    <string name="title_activity_tutor__verfication_page">Verification</string>
    <string name="title_activity_search_text_view">SearchTextView</string>
    <string name="title_activity_multi_subject_spinner">MultiSubjectSpinner</string>
    <string name="title_activity_single_subject_select">SingleSubjectSelect</string>
    <string name="title_activity_guest_control_board">GuestControlBoard</string>
    <string name="title_activity_guest_details">GuestActivityDetails</string>
    <string name="title_activity_student_home">StudentHome</string>
    <string name="title_activity_profile__update__personal">Profile_Update_Personal</string>
    <string name="title_activity_guest_profile">GuestProfile</string>
    <string name="title_activity_subscription">SubscriptionActivity</string>
    <string name="title_activity_subscription_detail">SubscriptionDetail</string>
    <string name="title_activity_profile_update_educational">Profile_update_educational</string>
    <string name="title_activity_profile__update__professional">Profile_Update_Professional</string>
    <string name="title_activity_tutor_material_upload">TutorMaterialUpload</string>
    <string name="title_activity_notification_details">NotificationDetails</string>
</resources>
