<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.twotr.twotr.globalpackfiles.SignupActivity"
    tools:layout_editor_absoluteY="25dp"
>


    <ImageButton
        android:id="@+id/signup_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/ic_back_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat"
        android:padding="5dp"
        android:text="TWOTR"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/butsignup_student"
        android:layout_width="136dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/signup_heading"
        android:fontFamily="@font/montserrat"
        android:text="@string/student"
        android:textAlignment="center"
        android:textColor="@color/mdtp_white"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/ed_fullname"
        app:layout_constraintEnd_toStartOf="@+id/butsignup_tutor"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/username_signup"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/butsignup_tutor"
        android:layout_width="136dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/signup_heading_greay"
        android:fontFamily="@font/montserrat"
        android:text="@string/tutor"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/ed_fullname"
        app:layout_constraintEnd_toEndOf="@+id/username_signup"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <EditText
        android:id="@+id/ed_fullname"
        android:layout_width="304dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/edittext_unselected"
        android:ems="10"
        android:padding="10dp"
        android:fontFamily="@font/montserrat"
        android:inputType="textPersonName|textCapSentences"
        android:hint="First Name"
        android:textColorLink="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <EditText
        android:id="@+id/ed_lastname"
        android:layout_width="304dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_unselected"
        android:ems="10"
        android:padding="10dp"
        android:fontFamily="@font/montserrat"
        android:inputType="textPersonName|textCapSentences"
        android:hint="Last Name"
        android:textColorLink="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_fullname" />

    <EditText
        android:id="@+id/username_signup"
        android:layout_width="304dp"
        android:layout_height="53dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_unselected"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/username"
        android:inputType="textEmailAddress|textCapSentences"
        android:padding="10dp"
        android:singleLine="true"
        android:textColorLink="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_lastname" />


    <EditText
        android:id="@+id/pass_signup"
        android:layout_width="304dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_unselected"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/username_signup"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/username_signup"
        app:layout_constraintTop_toBottomOf="@+id/username_signup" />

    <EditText
        android:id="@+id/confpass_signup"
        android:layout_width="304dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_unselected"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/pass_signup"
        app:layout_constraintStart_toStartOf="@+id/pass_signup"
        app:layout_constraintTop_toBottomOf="@+id/pass_signup" />

    <Button
        android:id="@+id/singup_buton_true"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/signin_butt"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/referal_signup" />

    <EditText
        android:id="@+id/referal_signup"
        android:layout_width="304dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_unselected"
        android:ems="10"
        android:padding="10dp"
        android:fontFamily="@font/montserrat"
        android:inputType="textPersonName|textCapSentences"
       android:hint="@string/referal_code"
        app:layout_constraintEnd_toEndOf="@+id/confpass_signup"
        app:layout_constraintStart_toStartOf="@+id/confpass_signup"
        app:layout_constraintTop_toBottomOf="@+id/confpass_signup" />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        style="@style/AVLoadingIndicatorView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:indicatorColor="@color/colorPrimaryDark"
        app:indicatorName="BallClipRotateMultipleIndicator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
