<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.twotr.twotr.globalpackfiles.SigninActivity"
    tools:layout_editor_absoluteY="25dp">

    <ImageButton
        android:id="@+id/signin_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ic_back_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:padding="5dp"
        android:text="TWOTR"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <LinearLayout
            android:id="@+id/facebook_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="2">

            <ImageView
                android:id="@+id/facebook_signin"
                android:layout_width="55dp"
                android:layout_height="55dp"
                app:srcCompat="@drawable/facebook" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="@font/montserrat"
                android:text="Facebook"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="2">

            <ImageView
                android:id="@+id/twitter_signin"
                android:layout_width="55dp"
                android:layout_height="55dp"

                app:srcCompat="@drawable/twitter" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="@font/montserrat"
                android:text="Twitter"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/zahaab_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="2">

            <ImageView
                android:id="@+id/zhahab_signin"
                android:layout_width="55dp"
                android:layout_height="55dp"
                app:srcCompat="@drawable/sailboat" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="Zahaab"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="10dp"
            android:background="@color/buttonColorSecondary"
            android:padding="2dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:padding="2dp"
            android:text="OR"
            android:textSize="18sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="70dp"
            android:background="@color/buttonColorSecondary"
            android:padding="2dp" />
    </LinearLayout>


    <!--<view-->
    <!--android:id="@+id/view_righl"-->
    <!--android:layout_width="161dp"-->
    <!--android:layout_height="1dp"-->
    <!--android:layout_marginEnd="8dp"-->
    <!--android:layout_marginStart="8dp"-->
    <!--android:layout_marginTop="60dp"-->
    <!--android:background="@color/buttonColorSecondary"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintStart_toEndOf="@+id/textView6"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/zhahab_signin" />-->

    <EditText
        android:id="@+id/username_signin"
        android:layout_width="304dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"

        android:layout_marginTop="28dp"
        android:background="@drawable/edittext_unselected"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/username"
        android:inputType="textEmailAddress|textCapSentences"
        android:padding="10dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <EditText
        android:id="@+id/password_signin"
        android:layout_width="304dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        android:background="@drawable/edittext_unselected"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/username_signin"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/username_signin"
        app:layout_constraintTop_toBottomOf="@+id/username_signin" />

    <Button
        android:id="@+id/signin_button"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/signin_butt"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/password_signin"
        app:layout_constraintStart_toStartOf="@+id/password_signin"
        app:layout_constraintTop_toBottomOf="@+id/password_signin" />

    <TextView
        android:id="@+id/forgetpass_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/forget_your_password"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/signin_button"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/signin_button"
        app:layout_constraintTop_toBottomOf="@+id/signin_button" />

    <TextView
        android:id="@+id/newcust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/iamnew"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/signin_button" />

    <TextView
        android:id="@+id/start_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/newcust"
        android:layout_alignBottom="@+id/newcust"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/newcust"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_up"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/newcust"
        app:layout_constraintTop_toBottomOf="@+id/forgetpass_signin"
        app:layout_constraintVertical_bias="1.0" />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        style="@style/AVLoadingIndicatorView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:indicatorColor="@color/colorPrimaryDark"
        app:indicatorName="BallClipRotateMultipleIndicator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
